implement jumbotron macrostrucutre

--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
 
     <main>
 
+        <section class="ms_jumbotron px-3"> <!--main jumbotron/carousel-->
+            <div class="container-fluid">
+                <div class="row align-items-end">
+                    <div class="col-12 div col-md-11 col-lg-4">
+                        <div class="ms_jumbo-content border border-danger m-2">contenuto jumbo</div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
