fix sect. jumbtron & subsection carousel structure

--- a/index.html
+++ b/index.html
@@ -38,15 +38,52 @@
 
     <main>
 
-        <section class="ms_jumbotron px-3"> <!--main jumbotron/carousel-->
-            <div class="container-fluid">
-                <div class="row align-items-end">
-                    <div class="col-12 div col-md-11 col-lg-4">
-                        <div class="ms_jumbo-content border border-danger m-2">contenuto jumbo</div>
+        <section id="ms_carousel"> <!--main jumbotron/carousel-->
+
+            <section class="ms_jumbotron"> <!--jumbotron-->
+                <div class="container-fluid">
+                    <div class="row align-items-end">
+                        <div class="col-12 col-md-10 col-lg-4">
+                            <div class="ms_jumbo-content border border-danger">contenuto jumbo</div>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </section>
+
+            <section class="ms_corousel py-3"> <!--carousel-->
+                <div class="container-fluid">
+                    <div class="row mx-2 g-4">
+
+                        <div class="col-6 col-sm-4 col-lg-2"> <!--card returnal-->
+                            <div class="ms_carousel-card"></div>
+                        </div>
+
+                        <div class="col-6 col-sm-4 col-lg-2"> <!--card ratchet & clank-->
+                            <div class="ms_carousel-card"></div>
+                        </div>
+
+                        <div class="col-6 col-sm-4 col-lg-2"> <!--card returnal-->
+                            <div class="ms_carousel-card"></div>
+                        </div>
+
+                        <div class="col-6 col-sm-4 col-lg-2"> <!--card ratchet & clank-->
+                            <div class="ms_carousel-card"></div>
+                        </div>
+
+                        <div class="col-6 col-sm-4 col-lg-2"> <!--card returnal-->
+                            <div class="ms_carousel-card"></div>
+                        </div>
+
+                        <div class="col-6 col-sm-4 col-lg-2"> <!--card ratchet & clank-->
+                            <div class="ms_carousel-card"></div>
+                        </div>
+
+                    </div>
+                </div>
+            </section>
         </section>
+
+
     </main>
 
     <footer>
