implement section ps5 introduction & img structure

--- a/index.html
+++ b/index.html
@@ -83,7 +83,27 @@
             </section>
         </section>
 
+        <section id="ps5" class="py-3">
+            <div class="container-fluid">
 
+                <div class="row py-2">
+                    <div class="col-12">
+                        <div class="ms_product-intro"></div>
+                    </div>
+                </div>
+
+                <div class="row py-2">
+
+                    <div class="col-12 col-md-5">
+                        <div class="ms_product-info"></div>
+                    </div>
+
+                    <div class="col-12 col-md-7">
+                        <div class="ms_product-img"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
