add section ps5 & 'it takes two' macrostructure

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
     <main>
 
         <section id="ms_carousel"> <!--main jumbotron/carousel-->
-
-            <section class="ms_jumbotron"> <!--jumbotron-->
+            <section class="ms_jumbotron"> <!--main jumbotron-->
                 <div class="container-fluid">
                     <div class="row align-items-end">
                         <div class="col-12 col-md-10 col-lg-4">
@@ -83,23 +82,53 @@
             </section>
         </section>
 
-        <section id="ps5" class="py-3">
+        <section id="ps5" class="py-3"> <!--section ps5-->
             <div class="container-fluid">
-
-                <div class="row py-2">
+                <div class="row py-2"> <!--product introduction-->
                     <div class="col-12">
                         <div class="ms_product-intro"></div>
                     </div>
                 </div>
 
-                <div class="row py-2">
-
+                <div class="row py-2"> <!--product information and big-img-->
                     <div class="col-12 col-md-5">
                         <div class="ms_product-info"></div>
                     </div>
 
                     <div class="col-12 col-md-7">
-                        <div class="ms_product-img"></div>
+                        <div class="ms_product-img mt-2 mt-md-0"></div>
+                    </div>
+                </div>
+
+                <div class="row py-2 justify-content-md-between"> <!--ps5 images carousel-->
+                    <div class="col-4 col-md-2"> <!--consolle image-->
+                        <div class="ms_card mb-2"></div>
+                    </div>
+
+                    <div class="col-4 col-md-2"> <!--controller image-->
+                        <div class="ms_card mb-2"></div>
+                    </div>
+
+                    <div class="col-4 col-md-2"> <!--headphones image-->
+                        <div class="ms_card mb-2"></div>
+                    </div>
+
+                    <div class=" col-4 col-md-2"> <!--psremote image-->
+                        <div class="ms_card mb-2"></div>
+                    </div>
+
+                    <div class="col-4 col-md-2"> <!--pscam image-->
+                        <div class="ms_card mb-2"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="it-takes-two" class="ms_jumbotron"> <!--jumbotron "it takes two" game-->
+            <div class="container-fluid">
+                <div class="row align-items-end">
+                    <div class="col-12 col-md-10 col-lg-4">
+                        <div class="ms_jumbo-content border border-danger">contenuto jumbo</div>
                     </div>
                 </div>
             </div>
