implement section new releases macrostructure

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
             </section>
 
-            <section class="ms_corousel py-3"> <!--carousel-->
+            <section class="ms_corousel py-4"> <!--carousel-->
                 <div class="container-fluid">
                     <div class="row mx-2 g-4">
 
@@ -82,7 +82,7 @@
             </section>
         </section>
 
-        <section id="ps5" class="py-3"> <!--section ps5-->
+        <section id="ps5" class="py-4"> <!--section ps5-->
             <div class="container-fluid">
                 <div class="row py-2"> <!--product introduction-->
                     <div class="col-12">
@@ -129,6 +129,66 @@
                 <div class="row align-items-end">
                     <div class="col-12 col-md-10 col-lg-4">
                         <div class="ms_jumbo-content border border-danger">contenuto jumbo</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="new-releases" class="py-4"> <!--new releases-->
+            <div class="container-fluid">
+                <div class="row"> <!--title-->
+                    <div class="col-12">
+                        <div class="ms_title mb-3"></div>
+                    </div>
+                </div>
+
+                <div class="row g-4"> <!--game cards-->
+                    <div class="col-6 col-sm-4 col-lg-2"> <!--card "tony hawk's 1/2"-->
+                        <div class="ms_game"></div>
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2"> <!--card "crash bandicoot"-->
+                        <div class="ms_game"></div>
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2"> <!--card "tony hawk's 1/2"-->
+                        <div class="ms_game"></div>
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2"> <!--card "crash bandicoot"-->
+                        <div class="ms_game"></div>
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2"> <!--card "tony hawk's 1/2"-->
+                        <div class="ms_game"></div>
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2"> <!--card "crash bandicoot"-->
+                        <div class="ms_game"></div>
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2"> <!--card "tony hawk's 1/2"-->
+                        <div class="ms_game"></div>
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2"> <!--card "crash bandicoot"-->
+                        <div class="ms_game"></div>
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2"> <!--card "tony hawk's 1/2"-->
+                        <div class="ms_game"></div>
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2"> <!--card "crash bandicoot"-->
+                        <div class="ms_game"></div>
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2"> <!--card "tony hawk's 1/2"-->
+                        <div class="ms_game"></div>
+                    </div>
+
+                    <div class="col-6 col-sm-4 col-lg-2"> <!--card "crash bandicoot"-->
+                        <div class="ms_game"></div>
                     </div>
                 </div>
             </div>
