implement section ps4 macrostructure

--- a/index.html
+++ b/index.html
@@ -193,6 +193,30 @@
                 </div>
             </div>
         </section>
+
+        <section id="ps4" class="py-4"> <!--section ps4-->
+            <div class="container-fluid">
+                <div class="row py-2"> <!--product introduction-->
+                    <div class="col-12">
+                        <div class="ms_product-intro"></div>
+                    </div>
+                </div>
+
+                <div class="row py-2 gy-3"> <!--ps4 & correlated products-->
+                    <div class="col-12 col-lg-4"> <!--ps4-->
+                        <div class="ps4"></div>
+                    </div>
+
+                    <div class="col-12 col-lg-4"> <!--playstation vr-->
+                        <div class="ps-vr"></div>
+                    </div>
+
+                    <div class="col-12 col-lg-4"> <!--ps4 accessories-->
+                        <div class="ps4-accessories"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
