implement section ps-plus macrostructure

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
         </section>
 
-        <section id="new-releases" class="py-4"> <!--new releases-->
+        <section id="new-releases" class="py-4"> <!--section new releases-->
             <div class="container-fluid">
                 <div class="row"> <!--title-->
                     <div class="col-12">
@@ -213,6 +213,20 @@
 
                     <div class="col-12 col-lg-4"> <!--ps4 accessories-->
                         <div class="ps4-accessories"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="ps-plus" class="py-4"> <!--section ps plus-->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-md-6"> <!--title, p & button-->
+                        <div class="ms_text border border-danger">testo</div>
+                    </div>
+                    
+                    <div class="col-md-6"> <!--image-->
+                        <div class="ms_lateral-img border border-danger d-none d-md-block">foto</div>
                     </div>
                 </div>
             </div>
