--- a/index.html
+++ b/index.html
@@ -231,6 +231,34 @@
                 </div>
             </div>
         </section>
+
+        <section id="savings" class="py-4"> <!--section savings-->
+            <div class="container-fluid">
+                <div class="row"> <!--title & p-->
+                    <div class="col-12">
+                        <div class="ms_product-intro"></div>
+                    </div>
+                </div>
+
+                <div class="row pt-3"> <!--cards w/various savings tiers-->
+
+                    <div class="col-12 col-md-4"> <!--discounted games-->
+                        <div class="saving-tier mb-2"></div>
+                    </div>
+
+                    <div class="col-12 col-md-4"> <!--golden week-->
+                        <div class="saving-tier mb-2"></div>
+                    </div>
+
+                    <div class="col-12 col-md-4"> <!--free to play-->
+                        <div class="saving-tier mb-2"></div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        
     </main>
 
     <footer>
