implement section ps-now macrostructure

--- a/index.html
+++ b/index.html
@@ -258,7 +258,19 @@
             </div>
         </section>
 
-        
+        <section id="ps-now" class="py-4 text-white"> <!--section ps now-->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-md-6"> <!--title, p & button-->
+                        <div class="ms_text border border-danger">testo</div>
+                    </div>
+                    
+                    <div class="col-md-6"> <!--image-->
+                        <div class="ms_lateral-img border border-danger d-none d-md-block">foto</div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
