implement section social media macrostructure

--- a/index.html
+++ b/index.html
@@ -271,6 +271,36 @@
                 </div>
             </div>
         </section>
+
+        <section id="social-media" class="py-5"> <!--section social media-->
+            <div class="container-lg">
+                <div class="row"><!--title-->
+                    <div class="col-12">
+                        <h2 class="ms_section-title"></h2>
+                    </div>
+                </div>
+
+                <div class="row pt-4 gx-4 gy-5"> <!--social logos-->
+
+                    <div class="col-6 col-sm-3"> <!--twitter-->
+                        <div class="ms_social-logo"></div>
+                    </div>
+
+                    <div class="col-6 col-sm-3"> <!--facebook-->
+                        <div class="ms_social-logo"></div>
+                    </div>
+
+                    <div class="col-6 col-sm-3"> <!--instagram-->
+                        <div class="ms_social-logo"></div>
+                    </div>
+
+                    <div class="col-6 col-sm-3"> <!--youtube-->
+                        <div class="ms_social-logo"></div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
