implement footer macrodstructure

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
     </header>
 
     <main>
-
         <section id="ms_carousel"> <!--main jumbotron/carousel-->
             <section class="ms_jumbotron"> <!--main jumbotron-->
                 <div class="container-fluid">
@@ -303,8 +302,40 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="py-4">
+        <div class="container-fluid">
+            <div class="row pb-3"> <!--logo, region & link list-->
 
+                <div class="col-12 col-lg-6"> <!--logo & region-->
+                    <div class="region"></div>
+                </div>
+
+                <div class="col-12 col-lg-6"> <!--link lists-->
+
+                    <div class="row flex-column flex-md-row"> <!--list 1-->
+                        <div class="col-12 col-md-4">
+                            <div class="ms_list mt-3 mt-lg-0"></div>
+                        </div>
+
+                        <div class="col-12 col-md-4"> <!--list 2-->
+                            <div class="ms_list mt-3 mt-lg-0"></div>
+                        </div>
+
+                        <div class="col-12 col-md-4"> <!--list 3-->
+                            <div class="ms_list mt-3 mt-lg-0"></div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="row pb-4"> <!--copyright-->
+                <div class="col-12">
+                    <div class="ms_copyright"></div>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
