--- a/index.html
+++ b/index.html
@@ -80,11 +80,18 @@
 
         <main>
             <section id="ms_carousel"> <!--main jumbotron/carousel-->
-                <section class="ms_jumbotron"> <!--main jumbotron-->
+                <section id="ms_main-jumbotron"> <!--main jumbotron-->
                     <div class="container-fluid">
-                        <div class="row align-items-end">
+                        <div class="row">
                             <div class="col-12 col-md-10 col-lg-4">
-                                <div class="ms_jumbo-content border border-danger">contenuto jumbo</div>
+                                <div class="ms_jumbo-content">
+                                    <img class="w-50 pb-3" src="./img/returnal-hero-banner-logo.png" alt="Returnal logo">
+                                    <h2 class="pb-3">Rompi il cerchio</h2>
+                                    <p class="pb-3">
+                                        Rialzati dop oogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico&comma; disponibile in esclusiva su ps5&#8228;
+                                    </p>
+                                    <a href="#" class="btn ms_btn-purchase mb-4">Acquista ora</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -165,7 +172,7 @@
                 </div>
             </section>
 
-            <section id="it-takes-two" class="ms_jumbotron"> <!--jumbotron "it takes two" game-->
+            <section id="it-takes-two" class="ms_game-jumbotron"> <!--jumbotron "it takes two" game-->
                 <div class="container-fluid">
                     <div class="row align-items-end">
                         <div class="col-12 col-md-10 col-lg-4">
@@ -379,6 +386,7 @@
                 </div>
             </div>
         </footer>
+
         <!-- script js -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     </body>
