implement carousel returnal/ratchet& clank content

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
 
         <main>
             <section id="ms_carousel"> <!--main jumbotron/carousel-->
-                <section id="ms_main-jumbotron"> <!--main jumbotron-->
+                <section id="ms_main-jumbotron" class="ms_jumbo"> <!--main jumbotron-->
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12 col-md-10 col-lg-4">
                                 <div class="ms_jumbo-content">
-                                    <img class="w-50 pb-3" src="./img/returnal-hero-banner-logo.png" alt="Returnal logo">
+                                    <img class="pb-3" src="./img/returnal-hero-banner-logo.png" alt="Returnal logo">
                                     <h2 class="pb-3">Rompi il cerchio</h2>
                                     <p class="pb-3">
                                         Rialzati dop oogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico&comma; disponibile in esclusiva su ps5&#8228;
@@ -102,27 +102,39 @@
                         <div class="row mx-2 g-4">
 
                             <div class="col-6 col-sm-4 col-lg-2"> <!--card returnal-->
-                                <div class="ms_carousel-card"></div>
+                                <div class="ms_carousel-card">
+                                    <img class="w-100" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal thumbnail">
+                                </div>
                             </div>
 
                             <div class="col-6 col-sm-4 col-lg-2"> <!--card ratchet & clank-->
-                                <div class="ms_carousel-card"></div>
+                                <div class="ms_carousel-card">
+                                    <img class="w-100" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet & Clank Thumbnail">
+                                </div>
                             </div>
 
                             <div class="col-6 col-sm-4 col-lg-2"> <!--card returnal-->
-                                <div class="ms_carousel-card"></div>
+                                <div class="ms_carousel-card">
+                                    <img class="w-100" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal thumbnail">
+                                </div>
                             </div>
 
                             <div class="col-6 col-sm-4 col-lg-2"> <!--card ratchet & clank-->
-                                <div class="ms_carousel-card"></div>
+                                <div class="ms_carousel-card">
+                                    <img class="w-100" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet & Clank Thumbnail">
+                                </div>
                             </div>
 
                             <div class="col-6 col-sm-4 col-lg-2"> <!--card returnal-->
-                                <div class="ms_carousel-card"></div>
+                                <div class="ms_carousel-card">
+                                    <img class="w-100" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal thumbnail">
+                                </div>
                             </div>
 
                             <div class="col-6 col-sm-4 col-lg-2"> <!--card ratchet & clank-->
-                                <div class="ms_carousel-card"></div>
+                                <div class="ms_carousel-card">
+                                    <img class="w-100" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet & Clank Thumbnail">
+                                </div>
                             </div>
 
                         </div>
@@ -172,7 +184,7 @@
                 </div>
             </section>
 
-            <section id="it-takes-two" class="ms_game-jumbotron"> <!--jumbotron "it takes two" game-->
+            <section id="it-takes-two" class="ms_jumbo"> <!--jumbotron "it takes two" game-->
                 <div class="container-fluid">
                     <div class="row align-items-end">
                         <div class="col-12 col-md-10 col-lg-4">
