--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
                 <section class="ms_corousel py-4"> <!--carousel-->
                     <div class="container-fluid">
-                        <div class="row mx-2 g-4">
+                        <div class="row mx-2 g-3">
 
                             <div class="col-6 col-sm-4 col-lg-2"> <!--card returnal-->
                                 <div class="ms_carousel-card">
@@ -146,39 +146,64 @@
                 <div class="container-fluid">
                     <div class="row py-2"> <!--product introduction-->
                         <div class="col-12">
-                            <div class="ms_product-intro"></div>
+                            <div class="ms_product-intro text-center">
+                                <span class="text-uppercase">play has no limit</span>
+                                <h2 class="mb-3">Ecco la PlayStation 5</h2>
+                                <p class="mb-3">Tuffati in nuove possibilit&agrave; di gioco completamente inaspettate</p>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="row py-2"> <!--product information and big-img-->
+                    <div class="row py-2 align-items-md-center"> <!--product information and big-img-->
                         <div class="col-12 col-md-5">
-                            <div class="ms_product-info"></div>
+                            <div class="ms_product-info">
+                                <h3 class="fs-3 mb-3">Console PlayStation 5</h3>
+                                <p class="mb-3">Sperimenta la nuova generazione di incredibili giochi PlaySation&#8228;</p>
+                                <a class="btn ms_btn-info" href="#">Maggiori informazioni</a>
+                            </div>
                         </div>
 
                         <div class="col-12 col-md-7">
-                            <div class="ms_product-img mt-2 mt-md-0"></div>
+                            <div class="ms_product-img mt-2 mt-md-0 text-center">
+                                <img src="./img/playstation-5-thumb.png" alt="ps5 console image">
+                            </div>
                         </div>
                     </div>
 
-                    <div class="row py-2 justify-content-md-between"> <!--ps5 images carousel-->
-                        <div class="col-4 col-md-2"> <!--consolle image-->
-                            <div class="ms_card mb-2"></div>
+                    <div class="row py-2 ps-3 justify-content-md-between"> <!--ps5 images carousel-->
+                        <div class="col-4 col-md-2"> <!--console image-->
+                            <div class="ms_card ms_border text-center mb-2 pb-5">
+                                <img src="./img/playstation-5-thumb.png" alt="ps5 console image">
+                                <span class="d-none d-md-block">Console PS5</span>
+                            </div>
                         </div>
 
                         <div class="col-4 col-md-2"> <!--controller image-->
-                            <div class="ms_card mb-2"></div>
+                            <div class="ms_card text-center mb-2 pb-5 opacity-50">
+                                <img src="./img/joypad-thumb.png" alt="ps5 controller image">
+                                <span class="d-none d-md-block">Controller wireless DualSense<i class="fa-sharp fa-solid fa-trademark"></i></span>
+                            </div>
                         </div>
 
-                        <div class="col-4 col-md-2"> <!--headphones image-->
-                            <div class="ms_card mb-2"></div>
+                        <div class="col-4 col-md-2"> <!--headset image-->
+                            <div class="ms_card text-center mb-2 pb-5 opacity-50">
+                                <img src="./img/headset-thumb.png" alt="ps5 headset image">
+                                <span class="d-none d-md-block">Cuffie wireless con microfono PULSE 3<i class="fa-sharp fa-solid fa-trademark"></i></span>
+                            </div>
                         </div>
 
                         <div class=" col-4 col-md-2"> <!--psremote image-->
-                            <div class="ms_card mb-2"></div>
+                            <div class="ms_card text-center mb-2 pb-5 opacity-50">
+                                <img src="./img/remote-thumb.png" alt="ps5 remote image">
+                                <span class="d-none d-md-block">Telecomando Media</span>
+                            </div>
                         </div>
 
                         <div class="col-4 col-md-2"> <!--pscam image-->
-                            <div class="ms_card mb-2"></div>
+                            <div class="ms_card text-center mb-2 pb-5 opacity-50">
+                                <img src="./img/camera-thumb.jpg" alt="ps5 camera image">
+                                <span class="d-none d-md-block">Telecamera HD</span>
+                            </div>
                         </div>
                     </div>
                 </div>
