implement section "it takes two" content

--- a/index.html
+++ b/index.html
@@ -213,7 +213,14 @@
                 <div class="container-fluid">
                     <div class="row align-items-end">
                         <div class="col-12 col-md-10 col-lg-4">
-                            <div class="ms_jumbo-content border border-danger">contenuto jumbo</div>
+                            <div class="ms_jumbo-content">
+                                <img class="pb-3" src="./img/it-takes-two-logo.png" alt="It takes two logo">
+                                <h2 class="pb-3">Un&prime;avventura cooperativa selvaggia ti attende</h2>
+                                <p class="pb-3">
+                                    Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico&comma; disponibile in esclusiva su ps5&#8228;
+                                </p>
+                                <a href="#" class="btn ms_btn-purchase mb-4">Acquista ora</a>
+                            </div>
                         </div>
                     </div>
                 </div>
