--- a/index.html
+++ b/index.html
@@ -230,57 +230,90 @@
                 <div class="container-fluid">
                     <div class="row"> <!--title-->
                         <div class="col-12">
-                            <div class="ms_title mb-3"></div>
+                            <div class="ms_title text-white mb-3">
+                                <h2 class="fw-bolder">Nuove uscite</h2>
+                                <span class="fs-2 ">Giochi incredibili per PS4 e PS5 disponibili ora</span>
+                            </div>
                         </div>
                     </div>
 
                     <div class="row g-4"> <!--game cards-->
                         <div class="col-6 col-sm-4 col-lg-2"> <!--card "tony hawk's 1/2"-->
-                            <div class="ms_game"></div>
+                            <div class="ms_game">
+                                <img class="w-100 mb-2" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawk's 1/2 thumbnail">
+                                <p class="text-white">Tony Hawk's<i class="fa-sharp fa-solid fa-trademark"></i> 1 + 2 </p>
+                            </div>
                         </div>
 
                         <div class="col-6 col-sm-4 col-lg-2"> <!--card "crash bandicoot"-->
-                            <div class="ms_game"></div>
+                            <div class="ms_game">
+                                <img class="w-100 mb-2" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash bandicoot 4 thumbnail">
+                                <p class="text-white">Crash Bandicoot 4: It&prime;s About Time</p>
+                            </div>
                         </div>
 
                         <div class="col-6 col-sm-4 col-lg-2"> <!--card "tony hawk's 1/2"-->
-                            <div class="ms_game"></div>
+                            <div class="ms_game">
+                                <img class="w-100 mb-2" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawk's 1/2 thumbnail">
+                                <p class="text-white">Tony Hawk's<i class="fa-sharp fa-solid fa-trademark"></i> 1 + 2 </p>
+                            </div>
                         </div>
 
                         <div class="col-6 col-sm-4 col-lg-2"> <!--card "crash bandicoot"-->
-                            <div class="ms_game"></div>
+                            <div class="ms_game">
+                                <img class="w-100 mb-2" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash bandicoot 4 thumbnail">
+                                <p class="text-white">Crash Bandicoot 4: It&prime;s About Time</p>
+                            </div>
                         </div>
 
                         <div class="col-6 col-sm-4 col-lg-2"> <!--card "tony hawk's 1/2"-->
-                            <div class="ms_game"></div>
+                            <div class="ms_game">
+                                <img class="w-100 mb-2" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawk's 1/2 thumbnail">
+                                <p class="text-white">Tony Hawk's<i class="fa-sharp fa-solid fa-trademark"></i> 1 + 2 </p>
+                            </div>
                         </div>
 
                         <div class="col-6 col-sm-4 col-lg-2"> <!--card "crash bandicoot"-->
-                            <div class="ms_game"></div>
+                            <div class="ms_game">
+                                <img class="w-100 mb-2" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash bandicoot 4 thumbnail">
+                                <p class="text-white">Crash Bandicoot 4: It&prime;s About Time</p>
+                            </div>
                         </div>
 
                         <div class="col-6 col-sm-4 col-lg-2"> <!--card "tony hawk's 1/2"-->
-                            <div class="ms_game"></div>
+                            <div class="ms_game">
+                                <img class="w-100 mb-2" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawk's 1/2 thumbnail">
+                                <p class="text-white">Tony Hawk's<i class="fa-sharp fa-solid fa-trademark"></i> 1 + 2 </p>
+                            </div>
                         </div>
 
                         <div class="col-6 col-sm-4 col-lg-2"> <!--card "crash bandicoot"-->
-                            <div class="ms_game"></div>
+                            <div class="ms_game"><img class="w-100 mb-2" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash bandicoot 4 thumbnail">
+                                <p class="text-white">Crash Bandicoot 4: It&prime;s About Time</p></div>
                         </div>
 
                         <div class="col-6 col-sm-4 col-lg-2"> <!--card "tony hawk's 1/2"-->
-                            <div class="ms_game"></div>
+                            <div class="ms_game">
+                                <img class="w-100 mb-2" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawk's 1/2 thumbnail">
+                                <p class="text-white">Tony Hawk's<i class="fa-sharp fa-solid fa-trademark"></i> 1 + 2 </p>
+                            </div>
                         </div>
 
                         <div class="col-6 col-sm-4 col-lg-2"> <!--card "crash bandicoot"-->
-                            <div class="ms_game"></div>
+                            <div class="ms_game"><img class="w-100 mb-2" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash bandicoot 4 thumbnail">
+                                <p class="text-white">Crash Bandicoot 4: It&prime;s About Time</p></div>
                         </div>
 
                         <div class="col-6 col-sm-4 col-lg-2"> <!--card "tony hawk's 1/2"-->
-                            <div class="ms_game"></div>
+                            <div class="ms_game">
+                                <img class="w-100 mb-2" src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawk's 1/2 thumbnail">
+                                <p class="text-white">Tony Hawk's<i class="fa-sharp fa-solid fa-trademark"></i> 1 + 2 </p>
+                            </div>
                         </div>
 
                         <div class="col-6 col-sm-4 col-lg-2"> <!--card "crash bandicoot"-->
-                            <div class="ms_game"></div>
+                            <div class="ms_game"><img class="w-100 mb-2" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash bandicoot 4 thumbnail">
+                                <p class="text-white">Crash Bandicoot 4: It&prime;s About Time</p></div>
                         </div>
                     </div>
                 </div>
