implement section ps4 content

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </section>
             </section>
 
-            <section id="ps5" class="py-4"> <!--section ps5-->
+            <section id="ps5" class="py-5"> <!--section ps5-->
                 <div class="container-fluid">
                     <div class="row py-2"> <!--product introduction-->
                         <div class="col-12">
@@ -226,7 +226,7 @@
                 </div>
             </section>
 
-            <section id="new-releases" class="py-4"> <!--section new releases-->
+            <section id="new-releases" class="py-5"> <!--section new releases-->
                 <div class="container-fluid">
                     <div class="row"> <!--title-->
                         <div class="col-12">
@@ -319,25 +319,45 @@
                 </div>
             </section>
 
-            <section id="ps4" class="py-4"> <!--section ps4-->
+            <section id="ps4" class="py-5"> <!--section ps4-->
                 <div class="container-fluid">
                     <div class="row py-2"> <!--product introduction-->
                         <div class="col-12">
-                            <div class="ms_product-intro"></div>
+                            <div class="ms_product-intro text-center">
+                                <h2 class="mb-3">Ecco la PlayStation<i class="fa-regular fa-registered"></i> 4</h2>
+                                <p class="mb-3">
+                                    Giochi incredibili e intrattenimento senza fine&#8228; Non c&prime;&egrave; mai stato un momento migliore per giocare sulla tua PS4&#8228;
+                                </p>
+                            </div>
                         </div>
                     </div>
 
                     <div class="row py-2 gy-3"> <!--ps4 & correlated products-->
-                        <div class="col-12 col-lg-4"> <!--ps4-->
-                            <div class="ps4"></div>
+                        <div class="col-12 col-md-4"> <!--ps4 console-->
+                            <div class="ps4">
+                                <img class="w-100" src="./img/ps4-slim-homepage-image-block.jpg" alt="ps4 slim console image">
+                                <h3 class="pb-3">PlayStation 4</h3>
+                                <p class="pb-2">Giochi incredibili live su PS4&comma; con 1 TB di spazio di archiviazione&#8228;</p>
+                                <a class="btn ms_btn-info" href="#">Scopri di pi&ugrave;</a>
+                            </div>
                         </div>
 
-                        <div class="col-12 col-lg-4"> <!--playstation vr-->
-                            <div class="ps-vr"></div>
+                        <div class="col-12 col-md-4"> <!--playstation vr-->
+                            <div class="ps4">
+                                <img class="w-100" src="./img/double11-202010-tw-psvr.jpg" alt="Playstation VR image">
+                                <h3 class="pb-3">PlayStation VR</h3>
+                                <p class="pb-2">Oltre 500 titoli ed esperienze di gioco&#8228; Scoprili tutti&#8228;</p>
+                                <a class="btn ms_btn-info" href="#">Scopri di pi&ugrave;</a>
+                            </div>
                         </div>
 
-                        <div class="col-12 col-lg-4"> <!--ps4 accessories-->
-                            <div class="ps4-accessories"></div>
+                        <div class="col-12 col-md-4"> <!--ps4 accessories-->
+                            <div class="ps4">
+                                <img class="w-100" src="./img/dualshock-4-listing-thumb.jpg" alt="ps4 dualshock image">
+                                <h3 class="pb-3">Accessori</h3>
+                                <p class="pb-2">MIgliora la tua esperienza PS4 con una gamma di accessori ufficiali&#8228;</p>
+                                <a class="btn ms_btn-info" href="#">Scopri di pi&ugrave;</a>
+                            </div>
                         </div>
                     </div>
                 </div>
