implement section ps plus content

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </section>
 
             <section id="header-bot"> <!--main nav-->
-                <nav class="navbar navbar-expand-md bg-light">
+                <nav class="navbar navbar-expand-lg bg-light">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="#">
                             <img src="./img/play_logo.svg" alt="Playstation logo">
@@ -363,15 +363,21 @@
                 </div>
             </section>
 
-            <section id="ps-plus" class="py-4"> <!--section ps plus-->
+            <section id="ps-plus"> <!--section ps plus-->
                 <div class="container-fluid">
-                    <div class="row">
+                    <div class="row align-items-center">
                         <div class="col-12 col-md-6"> <!--title, p & button-->
-                            <div class="ms_text border border-danger">testo</div>
+                            <div class="ms_text">
+                                <img class="w-50 mb-3 mt-5 mt-md-0" src="./img/ps-plus-logo.png" alt="Playstation plus logo">
+                                <p class="mb-3">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online&comma; giochi mensili&comma; sconti esclusivi e altro ancora&#8228;</p>
+                                <a class="btn ms_btn-psplus mb-5 mb-md-0" href="#">Esplora PlayStation Plus</a>
+                            </div>
                         </div>
                         
                         <div class="col-md-6"> <!--image-->
-                            <div class="ms_lateral-img border border-danger d-none d-md-block">foto</div>
+                            <div class="ms_lateral-img d-none d-md-block">
+                                <img class="w-75" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="ps plus april free games">
+                            </div>
                         </div>
                     </div>
                 </div>
