implement section savings

--- a/index.html
+++ b/index.html
@@ -383,26 +383,37 @@
                 </div>
             </section>
 
-            <section id="savings" class="py-4"> <!--section savings-->
+            <section id="savings" class="py-5"> <!--section savings-->
                 <div class="container-fluid">
                     <div class="row"> <!--title & p-->
                         <div class="col-12">
-                            <div class="ms_product-intro"></div>
+                            <div class="ms_product-intro text-center">
+                                <h2 class="pb-3">Nuovi sconti sul PlayStation Store</h2>
+                                <p>
+                                    Sconti pazzeschi&comma; collezioni curate e saldi stagionali su PS5 e PS VR&comma; tutti in un unico posto&#8228;
+                                </p>
+                            </div>
                         </div>
                     </div>
 
                     <div class="row pt-3"> <!--cards w/various savings tiers-->
 
                         <div class="col-12 col-md-4"> <!--discounted games-->
-                            <div class="saving-tier mb-2"></div>
+                            <div class="saving-tier mb-4">
+                                <img class="w-100" src="./img/playstation-store-games-under-20-spotlight.jpg" alt="Playstation store games under 20% thumbnail">
+                            </div>
                         </div>
 
                         <div class="col-12 col-md-4"> <!--golden week-->
-                            <div class="saving-tier mb-2"></div>
+                            <div class="saving-tier mb-4">
+                                <img class="w-100" src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="Playstation store golden week thumbnail">
+                            </div>
                         </div>
 
                         <div class="col-12 col-md-4"> <!--free to play-->
-                            <div class="saving-tier mb-2"></div>
+                            <div class="saving-tier mb-4">
+                                <img class="w-100" src="./img/playstation-store-free-to-play-spotlight.png" alt="Playstation store games free to play discounted thumbnail">
+                            </div>
                         </div>
 
                     </div>
