implement section ps now content

--- a/index.html
+++ b/index.html
@@ -420,17 +420,24 @@
                 </div>
             </section>
 
-            <section id="ps-now" class="py-4 text-white"> <!--section ps now-->
+            <section id="ps-now" class="text-white"> <!--section ps now-->
                 <div class="container-fluid">
-                    <div class="row">
+                    <div class="row align-items-center">
                         <div class="col-12 col-md-6"> <!--title, p & button-->
-                            <div class="ms_text border border-danger">testo</div>
+                            <div class="ms_text">
+                                <img class="w-50 mb-3 mt-5 mt-md-0" src="./img/ps-now-logo-two-column.png" alt="Playstation now logo">
+                                <p class="mb-3">
+                                    Ottieni l&prime;accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4&comma; PS3 e PS2 su PS4 o PC Windows&comma; con nuovi titoli aggiunti ogni mese&#8228;
+                                </p>
+                                <a class="btn ms_btn-psnow mb-5 mb-md-0" href="#">Esplora PlayStation Now</a>
+                            </div>
                         </div>
                         
                         <div class="col-md-6"> <!--image-->
-                            <div class="ms_lateral-img border border-danger d-none d-md-block">foto</div>
+                            <div class="ms_lateral-img d-none d-md-block">
+                                <img class="w-75" src="./img/ps-now-april-featured-image-block.png" alt="ps plus april featured games">
+                            </div>
                         </div>
-                    </div>
                 </div>
             </section>
 
