--- a/index.html
+++ b/index.html
@@ -445,26 +445,34 @@
                 <div class="container-lg">
                     <div class="row"><!--title-->
                         <div class="col-12">
-                            <h2 class="ms_section-title"></h2>
+                            <h2 class="ms_section-title text-center pb-3">Seguici sui social media</h2>
                         </div>
                     </div>
 
-                    <div class="row pt-4 gx-4 gy-5"> <!--social logos-->
+                    <div class="row pt-4 gx-3 gy-4"> <!--social logos-->
 
                         <div class="col-6 col-sm-3"> <!--twitter-->
-                            <div class="ms_social-logo"></div>
+                            <div class="ms_social-logo">
+                                <img class="w-100" src="./img/twitter.jpg" alt="Twitter logo">
+                            </div>
                         </div>
 
                         <div class="col-6 col-sm-3"> <!--facebook-->
-                            <div class="ms_social-logo"></div>
+                            <div class="ms_social-logo">
+                                <img class="w-100" src="./img/facebook.jpg" alt="Facebook logo">
+                            </div>
                         </div>
 
                         <div class="col-6 col-sm-3"> <!--instagram-->
-                            <div class="ms_social-logo"></div>
+                            <div class="ms_social-logo">
+                                <img class="w-100" src="./img/instagram.jpg" alt="Instagram logo">
+                            </div>
                         </div>
 
                         <div class="col-6 col-sm-3"> <!--youtube-->
-                            <div class="ms_social-logo"></div>
+                            <div class="ms_social-logo">
+                                <img class="w-100" src="./img/youtube.png" alt="Youtube logo">
+                            </div>
                         </div>
 
                     </div>
@@ -472,7 +480,7 @@
             </section>
         </main>
 
-        <footer class="py-4">
+        <footer class="py-5">
             <div class="container-fluid">
                 <div class="row pb-3"> <!--logo, region & link list-->
 
