implement footer content

--- a/index.html
+++ b/index.html
@@ -485,22 +485,54 @@
                 <div class="row pb-3"> <!--logo, region & link list-->
 
                     <div class="col-12 col-lg-6"> <!--logo & region-->
-                        <div class="region"></div>
+                        <div class="logo pb-3">
+                            <img class="ms_footer-logo" src="./img/ps-footer.svg" alt="Playstation logo">
+                        </div>
+
+                        <div class="region text-white">
+                            <img class="ms_globe" src="./img/language-globe.svg" alt="Language globe image">
+                            <span>Country / region:</span>
+                            <a class="text-white text-decoration-none" href="#">Italy</a>
+                        </div>
                     </div>
 
                     <div class="col-12 col-lg-6"> <!--link lists-->
 
                         <div class="row flex-column flex-md-row"> <!--list 1-->
                             <div class="col-12 col-md-4">
-                                <div class="ms_list mt-3 mt-lg-0"></div>
+                                <div class="ms_list mt-4 mt-lg-0">
+                                    <ul>
+                                        <li class="list-unstyled pb-1"><a class="text-white text-decoration-none" href="#">Link footer n</a></li>
+                                        <li class="list-unstyled pb-1"><a class="text-white text-decoration-none" href="#">Link footer n</a></li>
+                                        <li class="list-unstyled pb-1"><a class="text-white text-decoration-none" href="#">Link footer n</a></li>
+                                        <li class="list-unstyled pb-1"><a class="text-white text-decoration-none" href="#">Link footer n</a></li>
+                                        <li class="list-unstyled pb-1"><a class="text-white text-decoration-none" href="#">Link footer n</a></li>
+                                    </ul>
+                                </div>
                             </div>
 
                             <div class="col-12 col-md-4"> <!--list 2-->
-                                <div class="ms_list mt-3 mt-lg-0"></div>
+                                <div class="ms_list mt-3 mt-lg-0">
+                                    <ul>
+                                        <li class="list-unstyled pb-1"><a class="text-white text-decoration-none" href="#">Link footer n</a></li>
+                                        <li class="list-unstyled pb-1"><a class="text-white text-decoration-none" href="#">Link footer n</a></li>
+                                        <li class="list-unstyled pb-1"><a class="text-white text-decoration-none" href="#">Link footer n</a></li>
+                                        <li class="list-unstyled pb-1"><a class="text-white text-decoration-none" href="#">Link footer n</a></li>
+                                        <li class="list-unstyled pb-1"><a class="text-white text-decoration-none" href="#">Link footer n</a></li>
+                                        <li class="list-unstyled pb-1"><a class="text-white text-decoration-none" href="#">Link footer n</a></li>
+                                        <li class="list-unstyled pb-1"><a class="text-white text-decoration-none" href="#">Link footer n</a></li>
+                                    </ul>
+                                </div>
                             </div>
 
                             <div class="col-12 col-md-4"> <!--list 3-->
-                                <div class="ms_list mt-3 mt-lg-0"></div>
+                                <div class="ms_list mt-3 mt-lg-0">
+                                    <ul>
+                                        <li class="list-unstyled pb-1"><a class="text-white text-decoration-none" href="#">Link footer n</a></li>
+                                        <li class="list-unstyled pb-1"><a class="text-white text-decoration-none" href="#">Link footer n</a></li>
+                                        <li class="list-unstyled pb-1"><a class="text-white text-decoration-none" href="#">Link footer n</a></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
 
@@ -509,8 +541,13 @@
                 </div>
 
                 <div class="row pb-4"> <!--copyright-->
-                    <div class="col-12">
-                        <div class="ms_copyright"></div>
+                    <div class="col-12 col-lg-6">
+                        <div class="ms_copyright text-white">
+                            <img class="ms_sie-logo pb-2" src="./img/sie-logo.svg" alt="Sony interactive entertaiment logo">
+                            <p>
+                                Website <i class="fa-regular fa-copyright"></i>2021 Sony Interactive Entertainment Limited&#8228; Tutti i contenuti&comma; nomi dei giochi&comma; nomi commerciali e/o di abbigliamento&comma; marchi registrati&comma; grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari&#8228; Tutti i diritti riserevati&#8228; <a class="text-white" href="#">Maggiori info</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
